examples/jenkins/namespace.yaml
---
# Namespace Configuration
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
