examples/jenkins/traefik-ingressroute.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: jenkins-server-ingressroute
  namespace: jenkins
spec:
  entryPoints: 
    - web
  routes:
  - kind: Rule
    match: "Path(`/jenkins`)"
    priority: 10
  services:
    jenkins:
      loadBalancer:
        servers:
          - url: "https://www.google.com"
---
